# zephyrproject

./: .gitignore  local_firmware.code-workspace  zephyrproject.code-workspace
application-10dof/: CMakeLists.txt  prj.conf
application-10dof/boards/: nucleo_f103rb.overlay  nucleo_f446ze.overlay
application-10dof/src/: main.c
application-6dof/: CMakeLists.txt  prj.conf
application-6dof/boards/: thingy91_nrf9160ns.overlay
application-6dof/src/: main.c
application-green-blink/: CMakeLists.txt  prj.conf
application-green-blink/boards/: thingy91_nrf9160ns.overlay
application-green-blink/src/: main.c
application-pwm-blinky/: CMakeLists.txt
application-pwm-blinky/boards/: nucleo_f446ze.overlay
application-pwm-blinky/src/: main.c
application-test/: CMakeLists.txt
application-test-local/: CMakeLists.txt  prj.conf
application-test-local/boards/: thingy91_nrf9160ns.overlay
application-test-local/src/: iim42652.c  iim42652_setup.c  ixm42xxx.h  ixm42xxx_i2c.c  ixm42xxx_i2c.h  ixm42xxx_util.c  ixm42xxx_util.h
application-test/boards/: thingy91_nrf9160ns.overlay
application-test/drivers/sensor/iim42652/: Kconfig  ixm42xxx_trigger.c
application-test/dts/bindings/: invensense,iim42652-i2c.yaml
application-test/src/: iim42652.c  iim42652_setup.c  iim42652_setup.h  ixm42xxx.h  ixm42xxx_i2c.c  ixm42xxx_reg.h  ixm42xxx_util.c  main.c
mlx90393_backend_integration/: CMakeLists.txt  prj.conf
mlx90393_backend_integration/boards/: nrf9160dk_nrf9160ns.conf  nrf9160dk_nrf9160ns.overlay  thingy91_nrf9160ns.overlay
mlx90393_backend_integration/cert/: Baltimore_CyberTrust_Root_Api_Dev_AC_Backend.crt
mlx90393_backend_integration/child_image/: spm.conf
mlx90393_backend_integration/src/: at.c  at.h  backend.c  backend.h  cert.h  iim42652.c  iim42652.h  imu.h  main.c  mlx90393.c  mlx90393.h  (+5 more)
(+3 files in other folders)
